# rs_chardet

./: Cargo.toml  README.md  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
benchmark/: bench.py
nix/: customBuildHook.nix  maturin-build-hook.sh  package.nix
src/: lib.rs
