[package]
name = "rs_chardet"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_chardet"
crate-type = ["cdylib"]

[dependencies]
chardetng = "0.1.17"
pyo3 = { version = "0.27.0", features = ["extension-module", "abi3-py39"] }
