[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "rs-chardet"
requires-python = ">=3.7"
repository = "https://github.com/emattiza/rs_chardet"
authors = [
	{ name = "Evan Mattiza" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/emattiza/rs_chardet"
documentation = "https://github.com/emattiza/rs_chardet/README.md"
repository = "https://github.com/emattiza/rs_chardet"
