[build-system]
requires = ["maturin>=1.6,<1.7"]
build-backend = "maturin"

[project]
name = "rs-chardet"
requires-python = ">=3.10"
repository = "https://github.com/emattiza/rs_chardet"
authors = [
	{ name = "Evan Mattiza" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/emattiza/rs_chardet"
documentation = "https://github.com/emattiza/rs_chardet/README.md"
repository = "https://github.com/emattiza/rs_chardet"
